<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="SelectBackground"><b>: Step 1 - Select Background :</b></string>
    <string name="app_name">Picture Perfect</string>
    <string name="bestFace">Select Faces</string>
    <string name="unwantedObjects">Animate</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="Next">Next</string>
    <string name="Previous">Previous</string>
    <string name="NextA">→</string>
    <string name="PreviousA">←</string>
    <string name="editEx">Edit Existing Burst</string>
    <string name="TakeAPic">Take a Picture</string>
    <string name="selFace">: Step 2 : </string>
    <string name="remFace">: Step 3 : </string>
    <string name="welcome">Welcome to Picture Perfect!</string>
    <string name="NextP">S W I T C H</string>
    <string name="AddP">A D D</string>
    <string name="Sepia">Add Sepia Effect</string>
    <string name = "SelectThumb">Select</string>
    <string name="GrayScale">Add GrayScale Effect</string>
    <string name="BW">Add Cartoon Effect</string>
    <string name="Normal">Reset</string>
    <string name="Negative">Add Negative Effect</string>
    <string name="Solarize">Add Solarize Effect</string>
    <string name="Posterize">Add Posterize Effect</string>
    <string name="Whiteboard">Add Whiteboard Effect</string>
    <string name="finalI">Final Image!</string>
    <string name="finalT">P.S. Apply Filters from Menu</string>
    <string name="ayss">Do you want to select images?</string>
    <string name="Upload">Upload</string>
    <string name="str_yes">Yes</string>
    <string name="Animate">Animate!</string>
    <string name="About">About</string>
    <string name="Exit">Exit</string>
    <string name="app_about">About</string>
    <string name="app_help">Help</string>
    
    <string name="ays">Are you sure?</string>
    <string name="Settings">Settings</string>
    <string name="str_exit">Exit</string>
    <string name="app_about_messageA">Select images to include in the animation using ADD.</string>
    <string name="app_about_messageB">Browse through the images using Previous and Next. Press Done to a base image.</string>
    <string name="app_about_messageF">Select a face for each object using arrow. Press SWITCH to change objects.</string>
    <string name="app_about_messageR">Apply Effects using the menu</string>
    <string name="app_about_messageH">Choose Step 2 for replacing faces <br/> OR <br/> Step 3 to animate. Try it!</string>
    <string name="app_about_messageW">Picture Perfect v 1.1  OOSE Group 13</string>
    <string name="app_about_message">Use the Camera button on the side or the Search button in  the front to capture the images.</string>
    <string name="str_ok">OK</string>
    <string name="app_exit">Exit</string>
    <string name="app_exit_message">Do you want to exit?</string>
    <string name="str_no">No</string>
    

</resources>