<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#DCDCDC"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_weight="0.69"
        android:text="@string/selFace"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <Button
        android:id="@+id/choosebutton1"
        android:layout_width="310dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/bestFace" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_weight="0.70"
        android:text="@string/remFace"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <Button
        android:id="@+id/choosebutton2"
        android:layout_width="305dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="90dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/unwantedObjects" />

    <LinearLayout
        android:id="@+id/horiz"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="true" >

        <Button
            android:id="@+id/button3"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button4"
            android:layout_width="159dp"
            android:layout_height="match_parent"
            android:text="@string/done" />
    </LinearLayout>

</LinearLayout>