<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#000000"
        android:text="@string/SelectBackground"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.64"
        android:contentDescription="@string/SelectBackground"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/horiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button3"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/Previous" />

        <Button
            android:id="@+id/button1"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:text="@string/Next" />
    </LinearLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done" />

</LinearLayout>